# monte_carlo_financial_freedom

./: .gitignore  Monte Carlo Visualization.ipynb  README.md  freedom_simulator.py  india-inflation.csv  nifty_monthly_returns.csv  pyproject.toml
