[tool.poetry]
name = "monte-carlo-financial-freedom"
version = "0.1.0"
description = "Monte Carlo Simulation on financial freedom"
authors = ["Prabhat <prabhatrastogik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
